--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^2.1.4
   path: ^1.9.0
   firebase_storage: ^12.1.3
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
